*. fix logo alignment and header responsiveness

--- a/app/css/_menu.scss
+++ b/app/css/_menu.scss
@@ -154,6 +154,30 @@
 
 }
 
+@media (max-width: 1460px){
+  .nav-wrapper {
+    .logo {
+      left: -120px !important;
+    }
+  }
+}
+
+@media (max-width: 1280px){
+  .nav-wrapper {
+    .logo {
+      left: -145px !important;
+    }
+  }
+}
+
+@media (max-width: 1280px){
+  .nav-wrapper {
+    .logo {
+      left: -160px !important;
+    }
+  }
+}
+
 
 $navHeight: 133px;
 .nav-wrapper {
@@ -225,6 +249,8 @@ $navHeight: 133px;
 
       img {
         width: 100%;
+        position: absolute;
+        right: 20%;
       }
     }
 
@@ -232,7 +258,7 @@ $navHeight: 133px;
 
   .logo {
     position: absolute;
-    left: -100px;
+    left: -120px;
     min-width: 150px;
     width: 100%;
     height: 100%;
