--- a/app/css/main.css
+++ b/app/css/main.css
@@ -106,6 +106,18 @@ body {
     .nav-wrapper .details .menu-corner .content {
       padding-left: 115px !important; } }
 
+@media (max-width: 1460px) {
+  .nav-wrapper .logo {
+    left: -120px !important; } }
+
+@media (max-width: 1280px) {
+  .nav-wrapper .logo {
+    left: -145px !important; } }
+
+@media (max-width: 1280px) {
+  .nav-wrapper .logo {
+    left: -160px !important; } }
+
 .nav-wrapper {
   display: flex;
   position: absolute;
@@ -155,10 +167,12 @@ body {
       z-index: 1030;
       right: 0; }
       .nav-wrapper .logo-wrapper a img {
-        width: 100%; }
+        width: 100%;
+        position: absolute;
+        right: 20%; }
   .nav-wrapper .logo {
     position: absolute;
-    left: -100px;
+    left: -120px;
     min-width: 150px;
     width: 100%;
     height: 100%;
